eframe = { version = "0.28", default-features = false, features = ["wgpu"] }
[package]
name = "moon"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "^1.3"
chrono = "0.4.42"
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tungstenite = "0.28.0"


secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
eframe = { version = "0.28", default-features = false, features = ["glow", "default_fonts"] }
